barra de menu terminada.

--- a/pagina3/index.html
+++ b/pagina3/index.html
@@ -35,6 +35,10 @@
         </div>
     </header>
 
+
+
+    <script src="js/app.js"></script>
+
 </body>
-<!-- enlace https://www.youtube.com/watch?v=kM7fDbq0I_M -->
+<!-- enlace https://www.youtube.com/watch?v=kM7fDbq0I_M  1:23:00-->
 </html>
