--- a/pagina3/index.html
+++ b/pagina3/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@700&family=Montserrat:wght@400;700&family=Sigmar&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400&family=Montserrat:wght@400;700&family=Sigmar&display=swap"
         rel="stylesheet">
 
     <link rel="stylesheet" href="css/normalize.css">
@@ -33,6 +33,26 @@
                 <span></span><span></span><span></span>
             </div>
         </div>
+        <div class="contenido-encabezado contenedor">
+            <div class="texto-encabezado">
+                <h1>Estamos a la vanguardia de la Tecnología</h1>
+            </div>
+            <form action="" class="formulario-encabezado">
+                <h2>Agendá una cita con nosotros</h2>
+                <div class="input-encabezado">
+                    <input type="text" placeholder="Nombre">
+                </div>
+                <div class="input-encabezado">
+                    <input type="email" name="" id="" placeholder="Correo">
+                </div>
+                <div class="input-encabezado">
+                    <input type="tel" name="" id="" placeholder="Telefono">
+                </div>
+                <div class="boton-encabezado">
+                    <input class="btn azul" type="submit" value="Cotizar">
+                </div>
+            </form>
+        </div>
     </header>
 
 
@@ -40,5 +60,5 @@
     <script src="js/app.js"></script>
 
 </body>
-<!-- enlace https://www.youtube.com/watch?v=kM7fDbq0I_M  1:23:00-->
+<!-- enlace https://www.youtube.com/watch?v=kM7fDbq0I_M  1:55:00-->
 </html>
