seccion ventajas realizado

--- a/pagina3/index.html
+++ b/pagina3/index.html
@@ -13,6 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400&family=Montserrat:wght@400;700&family=Sigmar&display=swap"
         rel="stylesheet">
 
+    <script src="https://kit.fontawesome.com/2c07281cdd.js" crossorigin="anonymous"> </script>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
@@ -55,10 +56,34 @@
         </div>
     </header>
 
+    <div class="ventajas">
+        <div class="contenido-ventajas contenedor">
+            <div class="ventaja">
+                <i class="fa-solid fa-clock"></i>
+                <h3>Entrega en tiempo y forma</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo quaerat non libero, ullam nesciunt, minus
+                    maiores laboriosam ipsa odio facere tempore saepe pariatur, consequuntur sit officiis alias voluptatibus
+                    voluptatem sint!</p>
+            </div>
+            <div class="ventaja">
+                <i class="fa-solid fa-paintbrush"></i>
+                <h3>Diseño de interfaces modernas</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque aperiam iure alias quibusdam a fuga voluptas excepturi non tempore illo obcaecati inventore ad eligendi sequi nam autem, delectus ipsa rem?</p>
+            </div>
+            <div class="ventaja">
+                <i class="fa-solid fa-code"></i>
+                <h3>Software de calidad</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit facere odit voluptate molestias sunt accusantium, obcaecati accusamus earum eos sequi reprehenderit laudantium eveniet eum laborum sint ex aperiam maiores magnam?</p>
+            </div>
+
+        </div>
+    </div>
+
 
 
     <script src="js/app.js"></script>
 
 </body>
-<!-- enlace https://www.youtube.com/watch?v=kM7fDbq0I_M  1:55:00-->
+<!-- enlace https://www.youtube.com/watch?v=kM7fDbq0I_M  2:08:00-->
+
 </html>
