--- a/pagina3/index.html
+++ b/pagina3/index.html
@@ -61,29 +61,101 @@
             <div class="ventaja">
                 <i class="fa-solid fa-clock"></i>
                 <h3>Entrega en tiempo y forma</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo quaerat non libero, ullam nesciunt, minus
-                    maiores laboriosam ipsa odio facere tempore saepe pariatur, consequuntur sit officiis alias voluptatibus
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo quaerat non libero, ullam nesciunt,
+                    minus
+                    maiores laboriosam ipsa odio facere tempore saepe pariatur, consequuntur sit officiis alias
+                    voluptatibus
                     voluptatem sint!</p>
             </div>
             <div class="ventaja">
                 <i class="fa-solid fa-paintbrush"></i>
                 <h3>Diseño de interfaces modernas</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque aperiam iure alias quibusdam a fuga voluptas excepturi non tempore illo obcaecati inventore ad eligendi sequi nam autem, delectus ipsa rem?</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque aperiam iure alias quibusdam a fuga
+                    voluptas excepturi non tempore illo obcaecati inventore ad eligendi sequi nam autem, delectus ipsa
+                    rem?</p>
             </div>
             <div class="ventaja">
                 <i class="fa-solid fa-code"></i>
                 <h3>Software de calidad</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit facere odit voluptate molestias sunt accusantium, obcaecati accusamus earum eos sequi reprehenderit laudantium eveniet eum laborum sint ex aperiam maiores magnam?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit facere odit voluptate molestias
+                    sunt accusantium, obcaecati accusamus earum eos sequi reprehenderit laudantium eveniet eum laborum
+                    sint ex aperiam maiores magnam?</p>
             </div>
 
         </div>
     </div>
+    <section class="nosotros contenedor">
+        <h2>Sobre Nosotros</h2>
+        <div class="contenido-nosotros">
+            <div class="texto-nosotros">
+                <h3>Hacemos magia con código</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima veritatis tempora ipsam tenetur?
+                    Provident iure consequuntur eius illo quis, voluptatum ratione beatae debitis recusandae consectetur
+                    dicta est, quidem non repellendus.</p>
+                <a href="#" class="btn bordes">Saber Más</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="servicios contenedor">
+        <h2>Servicios</h2>
+        <div class="contenido-servicios">
+            <div class="servicio">
+                <i class="fa-solid fa-headphones"></i>
+                <h3>Soporte</h3>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam blanditiis libero optio consectetur
+                    debitis vero cumque modi ut ab, minus, error totam nemo rerum. Facilis quis ipsa ad obcaecati quas?
+                </p>                
+            </div>
+            <div class="servicio">
+                <i class="fa-solid fa-mobile-screen"></i>
+                <h3>Desarrollo Movil</h3>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam blanditiis libero optio consectetur
+                    debitis vero cumque modi ut ab, minus, error totam nemo rerum. Facilis quis ipsa ad obcaecati quas?
+                </p>                
+            </div>
+            <div class="servicio">
+                <i class="fa-solid fa-gears"></i>
+                <h3>Software personalizable</h3>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam blanditiis libero optio consectetur
+                    debitis vero cumque modi ut ab, minus, error totam nemo rerum. Facilis quis ipsa ad obcaecati quas?
+                </p>                
+            </div>
+            <div class="servicio">
+                <i class="fa-solid fa-paintbrush"></i>
+                <h3>Diseño web</h3>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam blanditiis libero optio consectetur
+                    debitis vero cumque modi ut ab, minus, error totam nemo rerum. Facilis quis ipsa ad obcaecati quas?
+                </p>                
+            </div>
+            <div class="servicio">
+                <i class="fa-solid fa-code"></i>
+                <h3>Ingeniería de Software</h3>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam blanditiis libero optio consectetur
+                    debitis vero cumque modi ut ab, minus, error totam nemo rerum. Facilis quis ipsa ad obcaecati quas?
+                </p>                
+            </div>
+            <div class="servicio">
+                <i class="fa-solid fa-database"></i>
+                <h3>Bases de datos</h3>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam blanditiis libero optio consectetur
+                    debitis vero cumque modi ut ab, minus, error totam nemo rerum. Facilis quis ipsa ad obcaecati quas?
+                </p>
+            </div>
+        </div>
+    </section>
 
 
 
     <script src="js/app.js"></script>
 
 </body>
-<!-- enlace https://www.youtube.com/watch?v=kM7fDbq0I_M  2:08:00-->
+<!-- enlace https://www.youtube.com/watch?v=kM7fDbq0I_M  2:42:45-->
 
 </html>
