--- a/pagina3/index.html
+++ b/pagina3/index.html
@@ -106,7 +106,7 @@
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam blanditiis libero optio consectetur
                     debitis vero cumque modi ut ab, minus, error totam nemo rerum. Facilis quis ipsa ad obcaecati quas?
-                </p>                
+                </p>
             </div>
             <div class="servicio">
                 <i class="fa-solid fa-mobile-screen"></i>
@@ -114,7 +114,7 @@
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam blanditiis libero optio consectetur
                     debitis vero cumque modi ut ab, minus, error totam nemo rerum. Facilis quis ipsa ad obcaecati quas?
-                </p>                
+                </p>
             </div>
             <div class="servicio">
                 <i class="fa-solid fa-gears"></i>
@@ -122,7 +122,7 @@
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam blanditiis libero optio consectetur
                     debitis vero cumque modi ut ab, minus, error totam nemo rerum. Facilis quis ipsa ad obcaecati quas?
-                </p>                
+                </p>
             </div>
             <div class="servicio">
                 <i class="fa-solid fa-paintbrush"></i>
@@ -130,7 +130,7 @@
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam blanditiis libero optio consectetur
                     debitis vero cumque modi ut ab, minus, error totam nemo rerum. Facilis quis ipsa ad obcaecati quas?
-                </p>                
+                </p>
             </div>
             <div class="servicio">
                 <i class="fa-solid fa-code"></i>
@@ -138,7 +138,7 @@
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam blanditiis libero optio consectetur
                     debitis vero cumque modi ut ab, minus, error totam nemo rerum. Facilis quis ipsa ad obcaecati quas?
-                </p>                
+                </p>
             </div>
             <div class="servicio">
                 <i class="fa-solid fa-database"></i>
@@ -150,12 +150,43 @@
             </div>
         </div>
     </section>
+    <section class="contacto">
+        <h2>Contactanos</h2>
+        <div class="contenido-contacto">
+            <div class="informacion-contacto">
+                <h3>Información de contacto</h3>
+                <p>busines@tecnology.com</p>
+                <p>+54 3886827105</p>
+            </div>
+            <form action="" class="formulario-contacto">
+                <div class="input-contacto">
+                    <label for="nombre">Nombre:</label>
+                    <input type="text" id="nombre" placeholder="Juan Perez">
+                </div>
+                <div class="input-contacto">
+                    <label for="correo">Correo:</label>
+                    <input type="email" id="correo" placeholder="example@example.com">
+                </div>
+                <div class="input-contacto">
+                    <label for="telefono">Teléfono:</label>
+                    <input type="text" id="telefono" placeholder="0115555555">
+                </div>
+                <div class="input-contacto">
+                    <label for="mensaje">Mensaje:</label>
+                    <textarea id="mensaje" ></textarea>
+                </div>
+                <div class="input-contacto">
+                    <input type="submit" value="Enviar" class="btn azul">
+                </div>
+            </form>
+        </div>
+    </section>
 
 
 
     <script src="js/app.js"></script>
 
 </body>
-<!-- enlace https://www.youtube.com/watch?v=kM7fDbq0I_M  2:42:45-->
+<!-- enlace https://www.youtube.com/watch?v=kM7fDbq0I_M  3:00:00-->
 
 </html>
