seccion footer y detalles de la pagina realizados.

--- a/pagina3/index.html
+++ b/pagina3/index.html
@@ -19,16 +19,16 @@
 </head>
 
 <body>
-    <header class="encabezado">
+    <header class="encabezado" id="inicio">
         <div class="contenido-navegacion">
             <div class="logo">
                 <h2>Business <span>Tecnology</span></h2>
             </div>
             <nav class="navegacion ocultar">
-                <a href="#">Inicio</a>
-                <a href="#">Nosostros</a>
-                <a href="#">Servicios</a>
-                <a href="#">Contactos</a>
+                <a href="#inicio">Inicio</a>
+                <a href="#nosotros">Nosostros</a>
+                <a href="#servicios">Servicios</a>
+                <a href="#contactos">Contactos</a>
             </nav>
             <div class="menu-hamburguesa">
                 <span></span><span></span><span></span>
@@ -84,7 +84,7 @@
 
         </div>
     </div>
-    <section class="nosotros contenedor">
+    <section class="nosotros contenedor" id="nosotros">
         <h2>Sobre Nosotros</h2>
         <div class="contenido-nosotros">
             <div class="texto-nosotros">
@@ -97,7 +97,7 @@
         </div>
     </section>
 
-    <section class="servicios contenedor">
+    <section class="servicios contenedor" id="servicios">
         <h2>Servicios</h2>
         <div class="contenido-servicios">
             <div class="servicio">
@@ -150,7 +150,7 @@
             </div>
         </div>
     </section>
-    <section class="contacto">
+    <section class="contacto" id="contactos">
         <h2>Contactanos</h2>
         <div class="contenido-contacto">
             <div class="informacion-contacto">
@@ -181,6 +181,12 @@
             </form>
         </div>
     </section>
+    <footer class="footer">
+        <div class="logo">
+            <h2>Business <span>Tecnology</span></h2>
+        </div>
+        <p>Todos los derechos reservados <span class="fecha"></span> &copy; Desarrollado por Sebastián Farfán</p>
+    </footer>
 
 
 
